fixed layout design:

--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,27 @@
 body{
-	margin:0;
+    margin:0;
 }
 header{
-	background-color: saddlebrown;
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-size: 35px;
-	color: white;
+    background-color: saddlebrown;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 35px;
+    color: white;
 }
 .grid-container{
-	display:flex;
-	align-items: flex-start;
-	justify-content: space-evenly;	
+    display:flex;
+    align-items: flex-start;
+    justify-content: space-evenly;  
 }
 .grade-colm{
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
-.p-colm{
-	display: flex;
-	flex-direction: column;
+.course-colm{
+    display: flex;
+    flex-direction: column;
 }
 .credits-colm{
-	display: flex;
-	flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
+
