--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ body {
     width: 100%;
 }
 
+html * {
+   font-family: 'Roboto Mono', monospace !important;
+}
+
 header {
     background-color: var(--ocean);
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -17,12 +21,18 @@ header {
     color: white;
     text-align: center;
     width: 100%;
-    height: 55px;
+    height: 8vh;
     margin: 0px;
 }
 
-html * {
-   font-family: 'Roboto Mono', monospace !important;
+.view-container {
+    margin: 0px;
+    position: fixed;
+    display: flex;
+    align-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 .footer {
@@ -32,13 +42,17 @@ html * {
     color: white;
     text-align: center;
     width: 100%;
-    height: 35px;
+    height: 5.5vh;
     margin: 0px;
+    margin-top: calc(100vh - 8vh);
+    position: relative;
+    bottom: 0;
 }
 
 .topbar-text {
     font-size: 90%;
     letter-spacing: .75vw;
+    padding-top: .35vh;
 }
 
 .footer-text{
@@ -57,19 +71,13 @@ html * {
     margin-top: 5vh;
 }
 
-.view-container {
-    margin: 0px;
-    position: relative;
-    display: flex;
-    align-content: center;
-    align-items: center;
-}
+
 
 .instruct-wrap {
     margin: 0px;
     background: var(--ocean2);
     width: 25vw;
-    min-height: calc(100vh - 90px);
+    min-height: calc(100vh - 4vh);
 }
 
 .instructions {
@@ -95,7 +103,7 @@ html * {
     margin: 0px;
     background: var(--ocean3);
     width: 75vw;
-    height: calc(100vh - 90px);
+    height: 96vh;
     background-image: url("../assets/wizardhat.png");
     background-repeat: no-repeat, repeat;
     background-position: center; /* Center the image */
