--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ header {
     color: ivory;
 }
 
+input {
+    padding: 3.25px;
+}
+
 .input-box {
     display: block;
     line-height: 1;
@@ -229,6 +233,13 @@ table {
 }
 
 .credits-colm {
+    /* display: flex;
+    flex-direction: column; */
+    display: block;
+    width: 15vw;
+}
+
+.retake-colm {
     /* display: flex;
     flex-direction: column; */
     display: block;
