--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,16 @@ header {
     border-radius: 3px;
 }
 
+.grade-form {
+    background: rgb(199, 173, 107, .8);
+    width: 15vw;
+    margin-top: 2.5vh;
+    border: 2px solid rounded;
+    border-color: ivory;
+    border-radius: 3px;
+    display: none;
+}
+
 .input-form2 {
     color: ivory;
 }
