--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,10 @@ header {
     border-radius: 3px;
 }
 
+/* #th {
+    display: none;
+} */
+
 .grade-form {
     background: rgb(199, 173, 107, .8);
     width: 15vw;
