attempted class modularization

--- a/css/style.css
+++ b/css/style.css
@@ -181,10 +181,7 @@ header {
     height: 100%;
     color: ivory;
     margin-left: 2.5vw;
-}
-
-::placeholder {
-    color: black;
+    
 }
 
 label {
@@ -257,5 +254,6 @@ button {
     margin-top: 3vh;
 }
 
-.output-box {
+.classGradeCalc-container {
+    display:none;
 }
