--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,12 @@ header {
     color: white;
     text-align: center;
     width: 100%;
-    height: 8vh;
-    margin: 0px;
+    /* height: 8vh; */
+    margin: 0;
 }
 
 .view-container {
-    margin: 0px;
+    margin: 0;
     position: fixed;
     display: flex;
     align-content: center;
@@ -43,17 +43,17 @@ header {
     text-align: center;
     width: 100%;
     height: 5.5vh;
-    margin: 0px;
+    margin: 0;
     margin-top: 86.5vh;
     position: relative;
     bottom: 0;
 }
 
-.topbar-text {
+/* .topbar-text {
     font-size: 90%;
     letter-spacing: .75vw;
     padding-top: .5vh;
-}
+} */
 
 .footer-text{
     position: block;
@@ -254,6 +254,51 @@ button {
     margin-top: 3vh;
 }
 
-.classGradeCalc-container {
-    display:none;
+#classGradeCalc-container {
+    display: none;
+}
+
+/*
+Navbar shit
+*/
+li{
+    list-style-type: none;
+    margin: 0;
+    padding: .5vh;
+    font-size: 3vh;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+    /* padding: 2vw; */
+    padding-top: 3vh;    
+    padding-right: 2vw;    
+    padding-bottom: 3.5vh;    
+    padding-left: 2vw;  
+    margin-right: 10px;
+    margin-top: -20px;
+}
+
+a:hover {
+    background-color: var(--ocean3);
+}
+
+nav {
+    height: 8vh;
+    padding: 1vh;
+    width: 100vw;
+    background-color: var(--ocean);
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+#logo {
+    padding-top: .5vh;
+    padding-left: .5vw;
+    padding-right: 2vw;
 }
