--- a/css/style.css
+++ b/css/style.css
@@ -275,12 +275,14 @@ table {
     flex-direction: column; */
     display: block;
     width: 15vw;
+    margin-right: 1vw;
 }
 .grade-colm {
     /* display: flex;
     flex-direction: column; */
     display: block;
     width: 15vw;
+    margin-right: 1vw;
 }
 .credits-colm {
     /* display: flex;
@@ -292,13 +294,19 @@ table {
     /* display: flex;
     flex-direction: column; */
     display: block;
-    width: 6.5vw;
+    width: 6vw;
 }
 .oldGrade-colm {
     /* display: flex;
     flex-direction: column; */
     display: block;
-    width: 15vw;
+    width: 12vw;
+}
+.passFail-colm {
+    /* display: flex;
+    flex-direction: column; */
+    display: block;
+    width: 6vw;
 }
 button {
     margin-left: 0;
