--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,16 @@ header {
     display: none;
 }
 
+.grade-form2 {
+    background: rgb(199, 173, 107, .8);
+    width: 5.5vw;
+    margin-top: 2.5vh;
+    border: 2px solid rounded;
+    border-color: ivory;
+    border-radius: 3px;
+    display: none;
+}
+
 input {
     padding: 3.5px;
 }
@@ -235,6 +245,7 @@ table {
     height: 25px;
     margin-left: 1.75vw;
 }
+
 .input-button:active, .input-button:checked:active {
   box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
 }
@@ -246,6 +257,8 @@ table {
     left: 3px;
     color: ivory;
 }
+
+
 .rows {
     display: inline-block;
     width:100%;
