--- a/css/style.css
+++ b/css/style.css
@@ -189,10 +189,9 @@ header {
     border-radius: 3px;
     display: none;
 }
-
 .grade-form2 {
     background: rgb(199, 173, 107, .8);
-    width: 5.5vw;
+    width: 4.5vw;
     margin-top: 2.5vh;
     border: 2px solid rounded;
     border-color: ivory;
@@ -244,8 +243,7 @@ table {
     width: 25px;
     height: 25px;
     margin-left: 1.75vw;
-}
-
+}z
 .input-button:active, .input-button:checked:active {
   box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
 }
@@ -257,8 +255,6 @@ table {
     left: 3px;
     color: ivory;
 }
-
-
 .rows {
     display: inline-block;
     width:100%;
