--- a/css/style.css
+++ b/css/style.css
@@ -296,17 +296,9 @@ table {
     font-size: 1em;
     text-decoration: underline;
 }
-tr {
-    width: 25vw;
-}
 td {
     width: 25vw;
 }
-
-.td-class {
-    width: 5vw;
-}
-
 .input-button {
     -webkit-appearance: none;
     border: 1px solid #cacece;
@@ -378,13 +370,18 @@ td {
 button {
     margin-left: 0;
 }
-#out {
-    padding: 2.5vh 0vh;
+.output-box-view {
     font-size: 1em;
     color: var(--pearl);
-    margin-top: 5vh;
+    margin-top: 3vh;
+    background-color: #131831;
+    border: 1px solid;
+    border-color: ivory;
     width: 92%;
     display: block;
+}
+#out {
+    padding: 2.5vh 0vh;
 }
 #submit-btn {
     margin-top: 5vh;
